# co2-monitor

./: .gitignore  LICENSE  Pipfile  README.md  config.yaml  handler.py  pyproject.toml  requirements.txt
lib/: spread_sheet.py
sensor/: CO2MINI.py  CO2MINI_test.py
