[tool.poetry]
name = "co2-monitor"
version = "0.1.0"
description = ""
authors = ["Takashi Suzuki <you@example.com>"]
license = "MIT License"

[tool.poetry.dependencies]
python = "^3.6"
gspread = "^3.6.0"
oauth2client = "^4.1.3"
schedule = "^0.6.0"
pyyaml = "^5.3.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
